chore: Preparando para atualização OpenRouter

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,14 @@
 # Exemplo de Variáveis de Ambiente
 # Copie este arquivo para .env e preencha com suas chaves
 
-# OpenAI (já configurada no ambiente)
-# OPENAI_API_KEY=sk-...
+# OpenRouter API (OBRIGATÓRIO)
+# Fornece acesso a múltiplos modelos de IA com preços competitivos
+# Obtenha sua chave em: https://openrouter.ai/keys
+OPENROUTER_API_KEY=sk-or-v1-...
 
 # ElevenLabs (OBRIGATÓRIO)
+# Para geração de narração com voz natural
+# Obtenha sua chave em: https://elevenlabs.io
 ELEVENLABS_API_KEY=sua_chave_elevenlabs_aqui
 
 # Configurações opcionais
