--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     
     environment:
       # Configure suas chaves de API aqui ou via arquivo .env
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - ELEVENLABS_API_KEY=${ELEVENLABS_API_KEY}
     
     volumes:
